// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ReceiveFundsForm > should emit amount onChange event 1`] = `
<DocumentFragment>
  <div
    data-testid="ReceiveFundsForm"
  >
    <div
      class="mt-4"
    >
      <fieldset
        class="[&:focus-within_.FormLabel]:text-theme-primary-600 dark:[&:focus-within_.FormLabel]:text-theme-primary-500 flex min-w-0 flex-col"
      >
        <label
          class="FormLabel hover:text-theme-primary-600! mb-2 flex font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100 text-sm"
          data-testid="FormLabel"
          for="amount"
        >
          Amount
          <span>
            <span>
              <span
                class="ml-1 text-theme-secondary-500 dim:text-theme-dim-500 dark:text-theme-secondary-700"
                data-testid="FormLabel__optional"
              >
                optional
              </span>
            </span>
          </span>
        </label>
        <div
          class="relative"
        >
          <div
            class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dim:border-theme-dim-500 dark:border-theme-secondary-700 focus-within:ring-1 h-12 overflow-hidden sm:h-14 transition-none hover:border-theme-navy-400 hover:outline-1 hover:outline-theme-navy-400 dim:hover:border-theme-dim-navy-600 dim:hover:outline-theme-dim-navy-600 dark:hover:border-theme-dark-navy-600 dark:hover:outline-theme-dark-navy-600 pr-20"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                autocomplete="off"
                class="bg-transparent! p-0! focus:ring-transparent! focus:outline-hidden focus:shadow-none [&.shadow-none]:shadow-none no-ligatures text-sm! sm:text-base! w-full border-none placeholder:text-theme-secondary-400 dim:placeholder:text-theme-dim-500 dark:placeholder:text-theme-secondary-700"
                data-testid="ReceiveFundsForm__amount"
                name="amount"
                placeholder="Amount"
                type="text"
                value="10"
              />
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ReceiveFundsForm > should render 1`] = `
<DocumentFragment>
  <div
    data-testid="ReceiveFundsForm"
  >
    <div
      class="mt-4"
    >
      <fieldset
        class="[&:focus-within_.FormLabel]:text-theme-primary-600 dark:[&:focus-within_.FormLabel]:text-theme-primary-500 flex min-w-0 flex-col"
      >
        <label
          class="FormLabel hover:text-theme-primary-600! mb-2 flex font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100 text-sm"
          data-testid="FormLabel"
          for="amount"
        >
          Amount
          <span>
            <span>
              <span
                class="ml-1 text-theme-secondary-500 dim:text-theme-dim-500 dark:text-theme-secondary-700"
                data-testid="FormLabel__optional"
              >
                optional
              </span>
            </span>
          </span>
        </label>
        <div
          class="relative"
        >
          <div
            class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dim:border-theme-dim-500 dark:border-theme-secondary-700 focus-within:ring-1 h-12 overflow-hidden sm:h-14 transition-none hover:border-theme-navy-400 hover:outline-1 hover:outline-theme-navy-400 dim:hover:border-theme-dim-navy-600 dim:hover:outline-theme-dim-navy-600 dark:hover:border-theme-dark-navy-600 dark:hover:outline-theme-dark-navy-600 pr-20"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                autocomplete="off"
                class="bg-transparent! p-0! focus:ring-transparent! focus:outline-hidden focus:shadow-none [&.shadow-none]:shadow-none no-ligatures text-sm! sm:text-base! w-full border-none placeholder:text-theme-secondary-400 dim:placeholder:text-theme-dim-500 dark:placeholder:text-theme-secondary-700"
                data-testid="ReceiveFundsForm__amount"
                name="amount"
                placeholder="Amount"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;
